# allcrypt

./: .pypirc  README.md  decrypt.py  demo file.py  encrypt.py  hardware-token.py  main.py  pyproject.toml  setup.py
.github/workflows/: pyproject.toml  python-publish.yml
allcrypt/: README.md  main.py
