[project]
name = "allcrypt"
version = "1.0.0"
authors = [
  { name="Example Author", email="pranavnasrani@gmail.com" },
]
description = "Encryption and Decryption software, with zipping and shredding file support. Password based two way encryption"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
  'tkinter',
  'tqdm',
  'base64',
  'shutil',
]
